# secdat

./: .gitignore  AGENTS.md  Makefile.am  README.md  autogen.sh  configure.ac  libsecdat.pc.in
.codex/agents/: rca-shortest-path-solver.toml  review-symmetry-consistency-coverage.toml  review-user-eye-blunt.toml  secdat-review-fix-worker.toml
.devcontainer/: Dockerfile.build  Dockerfile.dev  devcontainer.json
.github/: copilot-instructions.md
bindings/: README.md
bindings/go/: README.md  go.mod
bindings/go/secdat/: secdat.go
bindings/node/: README.md  binding.gyp  index.js  package-lock.json  package.json
bindings/node/src/: addon.cc
bindings/python/: README.md  pyproject.toml  secdat_sdk.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/src/: lib.rs
completions/: secdat.bash
contrib/: secdat-askpass
docs/: development-environment.md  exec-injection-design.md  release-workflow.md  secdat-fuse.1  secdat-spec.md  secdat.1
docs/adr/: 0001-inject-file-yaml-only.md  0002-inject-attribute-pregate-opt-in.md  0003-rename-inject-bulk-attributes.md  0004-bulk-select-vocabulary.md  0005-bulk-select-prose-and-help.md
docs/release-notes/: v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
po/: Makevars  POTFILES.in  ja.po
scripts/: bootstrap-system.sh
src/: Makefile.am  cli.c  cli.h  domain.c  domain.h  exec_inject.c  exec_inject.h  exec_inject_policy_file.c  i18n.h  json_util.c  json_util.h  main.c  secdat-fuse.c  secdat-sdk.h  store.c  store.h  store_exec_port.h
tests/: attribute_regression.sh  completion_regression.sh  e2e_regression.sh  export_regression.sh  fsck_regression.sh  fuse_regression.sh  inject_regression.sh  install_regression.sh  keyref_regression.sh  lower_level_regression.sh  metadata_relation_regression.sh  migrate_regression.sh  save_load_regression.sh  sdk_regression.sh  session_regression.sh  v2_fsck_regression.sh
